--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
   <prerequisites>
     <maven>3.0</maven>
   </prerequisites>
+
+  <organization>
+    <name>scala-ide.org</name>
+    <url>http://scala-ide.org</url>
+  </organization>
+
   <groupId>org.scala-ide</groupId>
   <artifactId>org.scala-ide.build</artifactId>
   <version>3.0.2-SNAPSHOT</version>
