--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
     <profile>
       <id>scala-2.10.x</id>
       <properties>
-        <scala.version>2.10.2</scala.version>
+        <scala.version>2.10.3-SNAPSHOT</scala.version>
         <scala.era.major.version>2.10</scala.era.major.version>
         <version.suffix>2_10</version.suffix>
         <sbt.version>0.13.0</sbt.version>
