Adds decorator extension point to change icons for Scala files
Scala files which are not on the classpath of a project get displayed
with an icon that is made for Java files. This commit replaces the Java
icon with a different one by using a decorator. Only the large icon is
replaced - smaller ones in the corners are not affected.

The decorator is enabled by default and can be disabled in
"Preferences/General/Appearance/Label Decorations/Scala Decorations"

This change only affects Scala files that are not on the classpath
because internally they are represented with a different object
compared to all other Scala files.

Fixes #1001975

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -1510,4 +1510,17 @@
          <!-- END : do we need these? -->
     </kind>
  </extension>
+ <extension
+       point="org.eclipse.ui.decorators">
+    <decorator
+          class="scala.tools.eclipse.ui.ScalaDecorator"
+          id="scala.tools.eclipse.ui.ScalaDecorator"
+          label="Scala Decorations"
+          state="true"
+          lightweight="true">
+       <description>
+          Shows Scala specific icons
+       </description>
+    </decorator>
+ </extension>
 </plugin>
